# OPlus-Brightness-Adaptor-For-Transsion

./: Cargo.toml  README.md  init.xia.display.adaptor.rc  readme-os14.md
.github/workflows/: rust.yml
odm/etc/init/: vendor.oplus.hardware.displaypanelfeature@1.0-service.rc
src/: ffi.rs  logging.rs  main.rs  modes.rs  paths.rs  properties.rs  scaling.rs  state.rs  utils.rs  writer.rs
