[package]
name = "oplusbright"
version = "0.1.0"
edition = "2021" # 2024 is not a valid edition, using 2021

[dependencies]
libc = "0.2" # Use semantic versioning

[lib]
name = "oplusbright"
path = "src/lib.rs"

[[bin]]
name = "xia_display_adaptor"
path = "src/main.rs" # Point to the new main.rs binary

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
